--- a/PitchPerfect/Info.plist
+++ b/PitchPerfect/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>needs access to microphone</string>
 </dict>
 </plist>
